# acf-ofa-tanf-longitudinal-dataset

./: .gitignore  README.md  gui.spec  pyproject.toml  requirements.txt
.github/workflows/: integration_tests.yml  run_tests.yml  sphinx_documentation.yml
caseload/: CaseloadDataLong.xlsx  CaseloadDataWide.xlsx  caseload_2023.py  caseload_FY2023.py  caseload_FYutils_refactor.py
caseload/data/: fy2023_ssp_caseload.xlsx  fy2023_tanf_caseload.xlsx
code/: LongitudinalVisualizations.py  Visualizations.ipynb  generate_documentation.py  generate_documentation.sh  make_documentation_directories.sh  make_gui_exe.py  make_html_documentation.sh  run_tests.sh  tableau_datasets.py  tableau_wireframe.html  update_documentation.py  update_index.py  visualization_data.py  visualizations.py
data/: TransformationDocumentation.docx  crosswalk.json  nav_bar.html
data/appended_data/: CaseloadDataLong.xlsx  CaseloadDataWide.xlsx  CaseloadLong.xlsx  CaseloadWide.xlsx  FinancialDataWide.xlsx  GuamCaseload.xlsx  analysis_report.txt  key.txt  value_patterns.txt
data/misc/: pce.csv
data/original_data/: fy1997_tan_caseload.xls  fy1998_tan_caseload.xls  fy1999_tan_caseload.xls  fy2000_ssp_caseload.xls  fy2000_tanssp_caseload.xls  fy2001_ssp_caseload.xls  fy2001_tanssp_caseload.xls  fy2002_tan_caseload.xls  fy2002_tanssp_caseload.xls  fy2003_ssp_caseload.xls  fy2003_tan_caseload.xls  fy2003_tanssp_caseload.xls  fy2004_ssp_caseload.xls  (+33 more)
tests/: data.py  test_TANFData.py  test_TableauDatasets.py  test_append.py  test_pandas_utils.py
workbooks/: CaseloadData.twb  FinancialData.twb
(+342 files in other folders)
