[project]
name = "ofa_tanf_longitudinal_dataset"
version = "0.0.1"
description = "OFA TANF Longitudinal Dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas", "openpyxl", "fuzzywuzzy", 
    "pdfminer.six", "sphinx", "xlsxwriter",
    "pyinstaller", "pytest", "urllib3>=2.6.3"
]

[project.optional-dependencies]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
tanf-append="otld.append.append:main"
tanf-append-gui="otld.append.gui:main"
tanf-tableau="otld.tableau.TableauDatasets:main"
tanf-tableau-gui="otld.tableau.gui:main"

[tool.pytest.ini_options]
markers = [
    "incremental: mark a test as incremental."
]